# APIGateway

./: CMakeLists.txt  README.md  main.cpp
UniversalAPIGateway/: Main.cpp  UniversalAPIGateway.cpp  UniversalAPIGateway.sln  UniversalAPIGateway.vcxproj  UniversalAPIGateway.vcxproj.filters
